[package]
name = "codeforces"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "96a"
path = "src/bin/96a.rs"

[[bin]]
name = "4a"
path = "src/bin/4a.rs"

[[bin]]
name = "71a"
path = "src/bin/71a.rs"

[[bin]]
name = "231a"
path = "src/bin/231a.rs"

[[bin]]
name = "282a"
path = "src/bin/282a.rs"

[[bin]]
name = "1a"
path = "src/bin/1a.rs"

[[bin]]
name = "158a"
path = "src/bin/158a.rs"

[[bin]]
name = "50a"
path = "src/bin/50a.rs"

[[bin]]
name = "263a"
path = "src/bin/263a.rs"

[[bin]]
name = "112a"
path = "src/bin/112a.rs"

[[bin]]
name = "339a"
path = "src/bin/339a.rs"

[[bin]]
name = "236a"
path = "src/bin/236a.rs"

[[bin]]
name = "281a"
path = "src/bin/281a.rs"

[[bin]]
name = "791a"
path = "src/bin/791a.rs"

[[bin]]
name = "266a"
path = "src/bin/266a.rs"

[[bin]]
name = "617a"
path = "src/bin/617a.rs"

[[bin]]
name = "118a"
path = "src/bin/118a.rs"

[[bin]]
name = "546a"
path = "src/bin/546a.rs"

[[bin]]
name = "59a"
path = "src/bin/59a.rs"
