[package]
name = "codeforces"
version = "0.1.0"
edition = "2024"

[dependencies]

[[bin]]
name = "96a"
path = "src/bin/96a.rs"

[[bin]]
name = "4a"
path = "src/bin/4a.rs"

[[bin]]
name = "71a"
path = "src/bin/71a.rs"

[[bin]]
name = "231a"
path = "src/bin/231a.rs"

[[bin]]
name = "282a"
path = "src/bin/282a.rs"

[[bin]]
name = "1a"
path = "src/bin/1a.rs"

[[bin]]
name = "158a"
path = "src/bin/158a.rs"

[[bin]]
name = "50a"
path = "src/bin/50a.rs"

[[bin]]
name = "263a"
path = "src/bin/263a.rs"

[[bin]]
name = "112a"
path = "src/bin/112a.rs"

[[bin]]
name = "339a"
path = "src/bin/339a.rs"

[[bin]]
name = "236a"
path = "src/bin/236a.rs"

[[bin]]
name = "281a"
path = "src/bin/281a.rs"

[[bin]]
name = "791a"
path = "src/bin/791a.rs"

[[bin]]
name = "266a"
path = "src/bin/266a.rs"

[[bin]]
name = "617a"
path = "src/bin/617a.rs"

[[bin]]
name = "118a"
path = "src/bin/118a.rs"

[[bin]]
name = "546a"
path = "src/bin/546a.rs"

[[bin]]
name = "59a"
path = "src/bin/59a.rs"

[[bin]]
name = "977a"
path = "src/bin/977a.rs"

[[bin]]
name = "69a"
path = "src/bin/69a.rs"

[[bin]]
name = "110a"
path = "src/bin/110a.rs"

[[bin]]
name = "734a"
path = "src/bin/734a.rs"

[[bin]]
name = "41a"
path = "src/bin/41a.rs"

[[bin]]
name = "677a"
path = "src/bin/677a.rs"

[[bin]]
name = "116a"
path = "src/bin/116a.rs"

[[bin]]
name = "271a"
path = "src/bin/271a.rs"

[[bin]]
name = "1030a"
path = "src/bin/1030a.rs"

[[bin]]
name = "266b"
path = "src/bin/266b.rs"

[[bin]]
name = "58a"
path = "src/bin/58a.rs"

[[bin]]
name = "467a"
path = "src/bin/467a.rs"

[[bin]]
name = "344a"
path = "src/bin/344a.rs"

[[bin]]
name = "122a"
path = "src/bin/122a.rs"

[[bin]]
name = "486a"
path = "src/bin/486a.rs"

[[bin]]
name = "136a"
path = "src/bin/136a.rs"

[[bin]]
name = "200b"
path = "src/bin/200b.rs"

[[bin]]
name = "160a"
path = "src/bin/160a.rs"

[[bin]]
name = "318a"
path = "src/bin/318a.rs"

[[bin]]
name = "228a"
path = "src/bin/228a.rs"

[[bin]]
name = "61a"
path = "src/bin/61a.rs"

[[bin]]
name = "705a"
path = "src/bin/705a.rs"

[[bin]]
name = "1328a"
path = "src/bin/1328a.rs"

[[bin]]
name = "133a"
path = "src/bin/133a.rs"

[[bin]]
name = "405a"
path = "src/bin/405a.rs"

[[bin]]
name = "520a"
path = "src/bin/520a.rs"

[[bin]]
name = "469a"
path = "src/bin/469a.rs"

[[bin]]
name = "144a"
path = "src/bin/144a.rs"
